<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chess</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_play">New Game</string>
    <string name="action_replay">Load Replay</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="action_undo">Undo</string>
    <string name="action_draw">Draw</string>
    <string name="action_resign">Resign</string>
    <string name="action_move">Move</string>
    <string name="action_ai">AI</string>
    <string name="title_activity_game_screen">Game</string>
    <string name="save_prompt">Would you like to save the game? If so, please enter a name for it</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="select_game">Select game</string>0
    <string name="title_activity_save_game">Save Game?</string>
    <string name="title_activity_list_games">Select Game to Replay</string>
    <string name="title_activity_replay">Replay Game</string>
    <string name="prev_move">Previous Move</string>
    <string name="next_move">Next Move</string>

</resources>
