<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity"
    android:background="#ff550a4b"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:textColor="#ffffffff"
            android:singleLine="false"
            android:focusable="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_weight="4"
        android:weightSum="10"
        android:id="@+id/main_layout"
        android:background="@drawable/ic_base_main_bg"
        android:gravity="bottom">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_gravity="bottom"
            android:id="@+id/main_buttons"
            android:orientation="vertical"
            android:gravity="bottom|center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_play"
                android:id="@+id/new_game_button" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_replay"
                android:id="@+id/replay_button" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_settings"
                android:id="@+id/settings_button" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_quit"
                android:id="@+id/quit_button" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>