<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ff5e2d67"
    tools:context=".ListGamesActivity" >

    <Button
        android:id="@+id/sort_by_name"
        android:text="@string/sort_by_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sortByName" />

    <Button
        android:id="@+id/sort_by_date"
        android:text="@string/sort_by_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/sort_by_name"
        android:onClick="sortByDate" />

    <TextView
        android:id="@+id/select_game"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sort_by_name"
        android:text="@string/select_game"
        android:textColor="#ffffffff" />

    <ListView
        android:id="@+id/list_games"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/select_game"
        android:choiceMode="singleChoice"
        android:divider="#ffffffff"
        android:dividerHeight="1dp" />

</RelativeLayout>