    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".GameScreenActivity"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="0dp"
        android:background="#ff5e2d67"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls">

        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/board"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:numColumns="8"
            android:verticalSpacing="0dp"
            android:horizontalSpacing="0dp"
            android:stretchMode="columnWidth"
            android:padding="0dp"
            android:gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:background="#ff222222">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_undo"
                    android:id="@+id/undo_btn"
                    android:layout_gravity="left" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_draw"
                    android:id="@+id/draw_btn"
                    android:layout_gravity="left" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_resign"
                    android:id="@+id/resign_btn"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_move"
                    android:id="@+id/move_btn"
                    android:layout_gravity="right" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_ai"
                    android:id="@+id/ai_btn"
                    android:layout_gravity="right" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
